force-app/main/default/objects/Closing__c/fields/Adjustment_to_Tax_Prep_Fees__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_to_Tax_Prep_Fees__c</fullName>
    <inlineHelpText>Tax Prep Fee is calculated in a flow. Use this field to adjust the amount, if needed. To decrease the Tax Prep Fee, enter a negative number here.</inlineHelpText>
    <label>Adjustment to Tax Prep Fees</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>