force-app/main/default/objects/Closing__c/fields/Age_At_Death__c.field-meta.xml
<CustomField>
    <fullName>Age_At_Death__c</fullName>
    <formula>FLOOR((Date_of_Death__c - Beneficiary__r.Birthdate)/365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age At Death</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>