force-app/main/default/objects/Closing__c/fields/Amount_Distributed_to_Remainder_Persons__c.field-meta.xml
<CustomField>
    <fullName>Amount_Distributed_to_Remainder_Persons__c</fullName>
    <label>Amount Distributed to Remainder Persons</label>
    <summarizedField>Remainder_Person__c.Remainder_Check_Amount__c</summarizedField>
    <summaryForeignKey>Remainder_Person__c.Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>