force-app/main/default/objects/Closing__c/fields/Amount_Retained_by_Trust__c.field-meta.xml
<CustomField>
    <fullName>Amount_Retained_by_Trust__c</fullName>
    <formula>IF(AND(Trust__r.Enrollment_Date__c &lt; DATE(2023,10,1), 
TMHP_Amount_Owed__c &gt; (Balance_After_Fees__c -  Balance_After_Fees_to_Arcare__c)), 0,
IF(AND(Trust__r.Enrollment_Date__c &gt;= DATE(2023,10,1), 
TMHP_Amount_Owed__c &gt; (Balance_After_Fees__c -  Balance_After_Fees_to_Arcare__c)), Balance_After_Fees__c -  Balance_After_Fees_to_Arcare__c,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Trusts with Enrollment Dates on or after 10/1/2023, where the TMHP Amount Owed is greater than the balance after The Arc receives its percentage, this is the balance. If the Enrollment Date is before 10/1/2023 and the TMHP Amount Owed is greater than what is left, this value is $0.</inlineHelpText>
    <label>Amount Retained by Trust</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>