force-app/main/default/objects/Closing__c/fields/Amount_Sent_to_Arcare__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sent_to_Arcare__c</fullName>
    <formula>Closing_Fee__c +  Frequent_Disbursement_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Sent to Arcare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>