force-app/main/default/objects/Closing__c/fields/Amount_Sent_To_Remainder__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sent_To_Remainder__c</fullName>
    <formula>Balance_After_Fees_to_Arcare__c  +  Amount_Retained_by_Trust__c -  Unclaimed_Amount_to_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance After Fees multiplied by Percent Leaving to The Arc plus the Amount Retained by Trust less the Unclaimed Amount Sent to Reserve</inlineHelpText>
    <label>Amount Sent To Remainder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>