force-app/main/default/objects/Closing__c/fields/Amount_Sent_to_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sent_to_Reserve__c</fullName>
    <formula>Final_Accounting_Fee__c  +  Tax_Prep_Fees__c +  Other_Closing_Fee__c +  Death_Verification_Fee__c + Unclaimed_Amount_to_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Sent to Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>