force-app/main/default/objects/Closing__c/fields/Balance_After_Fees__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_Fees__c</fullName>
    <formula>Balance_for_Closing__c -  Total_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance After Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>