force-app/main/default/objects/Closing__c/fields/Balance_After_Fees_to_Arcare__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_Fees_to_Arcare__c</fullName>
    <formula>Balance_After_Fees__c * Percent_Leaving_to_Arcare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance After Fees multiplied by Percent Leaving to The Arc</inlineHelpText>
    <label>Balance After Fees/% to Arcare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>