force-app/main/default/objects/Closing__c/fields/Balance_After_TMHP_Payment__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_TMHP_Payment__c</fullName>
    <formula>Balance_After_Fees__c - Balance_After_Fees_to_Arcare__c - TMHP_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance After TMHP Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>