force-app/main/default/objects/Closing__c/fields/Balance_for_Closing__c.field-meta.xml
<CustomField>
    <fullName>Balance_for_Closing__c</fullName>
    <description>This is the balance from True Link for closing an account.</description>
    <inlineHelpText>This is the CASH balance from True Link for closing an account after it has been sent to cash.</inlineHelpText>
    <label>Balance for Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>