force-app/main/default/objects/Closing__c/fields/Charge_Last_Month_s_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Last_Month_s_Fee__c</fullName>
    <label>Charge Last Month&apos;s Fee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>