force-app/main/default/objects/Closing__c/fields/Charity_Ultimate_Remainderperson__c.field-meta.xml
<CustomField>
    <fullName>Charity_Ultimate_Remainderperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charity Ultimate Remainderperson</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>