force-app/main/default/objects/Closing__c/fields/Check_Client_Notes_Safe_Spreadsheets__c.field-meta.xml
<CustomField>
    <fullName>Check_Client_Notes_Safe_Spreadsheets__c</fullName>
    <inlineHelpText>The spreadsheets are located here in OneDrive: CFPD/Electronic Processes/Documents and Cards in Safe.</inlineHelpText>
    <label>Check Client Notes/Safe Spreadsheets</label>
    <type>Date</type>
</CustomField>