force-app/main/default/objects/Closing__c/fields/Claim_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Claim_Paid_in_Full__c</fullName>
    <formula>AND(Medicaid_Claim_Amount__c &gt; 0, Medicaid_Amount_Paid__c &gt;= Medicaid_Claim_Amount__c)</formula>
    <label>Claim Paid in Full?</label>
    <type>Checkbox</type>
</CustomField>