force-app/main/default/objects/Closing__c/fields/Closing_Address__c.field-meta.xml
<CustomField>
    <fullName>Closing_Address__c</fullName>
    <label>Closing Address</label>
    <type>TextArea</type>
</CustomField>