force-app/main/default/objects/Closing__c/fields/Closing_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Closing_Check_Number__c</fullName>
    <label>Closing Check Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>