force-app/main/default/objects/Closing__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <label>Closing Comments</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>