force-app/main/default/objects/Closing__c/fields/Closing_Dear_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Closing_Dear_Salutation__c</fullName>
    <label>Closing Dear (Salutation)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>