force-app/main/default/objects/Closing__c/fields/Closing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Closing_Fee__c</fullName>
    <label>Closing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>