force-app/main/default/objects/Closing__c/fields/Closing_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Letter_Date__c</fullName>
    <label>Closing Letter Date</label>
    <type>Date</type>
</CustomField>