force-app/main/default/objects/Closing__c/fields/Closing_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Notification_Date__c</fullName>
    <label>Closing Notification Date</label>
    <type>Date</type>
</CustomField>