force-app/main/default/objects/Closing__c/fields/Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Resignation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>