force-app/main/default/objects/Closing__c/fields/Closing_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Return_Receipt_Date__c</fullName>
    <label>Closing Return Receipt Date</label>
    <type>Date</type>
</CustomField>