force-app/main/default/objects/Closing__c/fields/Closing_Started__c.field-meta.xml
<CustomField>
    <fullName>Closing_Started__c</fullName>
    <formula>!ISBLANK(TEXT(Closing_Reason__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Started</label>
    <type>Checkbox</type>
</CustomField>