force-app/main/default/objects/Closing__c/fields/Condolence_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Condolence_Sent_Date__c</fullName>
    <label>Condolence Sent Date</label>
    <type>Date</type>
</CustomField>