force-app/main/default/objects/Closing__c/fields/DADs_Amount__c.field-meta.xml
<CustomField>
    <fullName>DADs_Amount__c</fullName>
    <label>DADs Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>