force-app/main/default/objects/Closing__c/fields/DADs_Check_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>DADs_Check_Sent_Date__c</fullName>
    <label>DADs Check Sent Date</label>
    <type>Date</type>
</CustomField>