force-app/main/default/objects/Closing__c/fields/DADs_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>DADs_Contact_Date__c</fullName>
    <label>DADs Contact Date</label>
    <type>Date</type>
</CustomField>