force-app/main/default/objects/Closing__c/fields/DADs_Reply_Recd_Date__c.field-meta.xml
<CustomField>
    <fullName>DADs_Reply_Recd_Date__c</fullName>
    <label>DADs Reply Recd Date</label>
    <type>Date</type>
</CustomField>