force-app/main/default/objects/Closing__c/fields/Date_of_Death_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death_Formula__c</fullName>
    <formula>Beneficiary__r.Date_of_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Death (Formula)</label>
    <type>Date</type>
</CustomField>