force-app/main/default/objects/Closing__c/fields/Date_Sent_to_Cash__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Cash__c</fullName>
    <label>Date Sent to Cash</label>
    <type>Date</type>
</CustomField>