force-app/main/default/objects/Closing__c/fields/Death_Certificate_City__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_City__c</fullName>
    <label>Death Certificate City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>