force-app/main/default/objects/Closing__c/fields/Death_Certificate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Fee__c</fullName>
    <label>Death Certificate Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>