force-app/main/default/objects/Closing__c/fields/Death_Certificate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Notes__c</fullName>
    <label>Death Certificate Notes</label>
    <type>TextArea</type>
</CustomField>