force-app/main/default/objects/Closing__c/fields/Death_Certificate_Obituary_Received__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Obituary_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Death Certificate/Obituary Received</label>
    <type>Checkbox</type>
</CustomField>