force-app/main/default/objects/Closing__c/fields/Death_Certificate_Requested__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Death Certificate Requested</label>
    <type>Checkbox</type>
</CustomField>