force-app/main/default/objects/Closing__c/fields/Death_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Notification_Date__c</fullName>
    <label>Death Notification Date</label>
    <type>Date</type>
</CustomField>