force-app/main/default/objects/Closing__c/fields/Death_Notified_By__c.field-meta.xml
<CustomField>
    <fullName>Death_Notified_By__c</fullName>
    <label>Death Notified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>