force-app/main/default/objects/Closing__c/fields/Death_Verification_Fee__c.field-meta.xml
<CustomField>
    <fullName>Death_Verification_Fee__c</fullName>
    <label>Death Verification Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>