force-app/main/default/objects/Closing__c/fields/Death_Verification_Received__c.field-meta.xml
<CustomField>
    <fullName>Death_Verification_Received__c</fullName>
    <label>Death Verification Received</label>
    <type>Date</type>
</CustomField>