force-app/main/default/objects/Closing__c/fields/Death_Verification_Requested__c.field-meta.xml
<CustomField>
    <fullName>Death_Verification_Requested__c</fullName>
    <inlineHelpText>Date that the Death Verification was sent to Vital Statistics.  Leave blank if death certificate received.</inlineHelpText>
    <label>Death Verification Requested</label>
    <type>Date</type>
</CustomField>