force-app/main/default/objects/Closing__c/fields/Distribution_Process_Letter_Relationshp__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Process_Letter_Relationshp__c</fullName>
    <label>Distribution Process Letter Relationshp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>