force-app/main/default/objects/Closing__c/fields/Distribution_Process_Letter_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Process_Letter_Sent_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Process Letter Sent To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Distribution Process Letter Sent To)</relationshipLabel>
    <relationshipName>Closings1</relationshipName>
    <type>Lookup</type>
</CustomField>