force-app/main/default/objects/Closing__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <formula>Trust__r.EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIN</label>
    <type>Text</type>
</CustomField>