force-app/main/default/objects/Closing__c/fields/Estimated_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Taxes__c</fullName>
    <inlineHelpText>If it is a Trust I or III - review past years for any taxes paid previously</inlineHelpText>
    <label>Estimated Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>