force-app/main/default/objects/Closing__c/fields/Fees_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Fees_Calculated_Date__c</fullName>
    <inlineHelpText>COORDINATORS: Enter the date you calculate fees.</inlineHelpText>
    <label>Fees Calculated Date</label>
    <type>Date</type>
</CustomField>