force-app/main/default/objects/Closing__c/fields/Final_Accounting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Final_Accounting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Accounting Complete</label>
    <type>Checkbox</type>
</CustomField>