force-app/main/default/objects/Closing__c/fields/Final_Accounting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Accounting_Fee__c</fullName>
    <label>Final Accounting Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>