force-app/main/default/objects/Closing__c/fields/Final_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Disbursement_Amount__c</fullName>
    <inlineHelpText>This is for the final disbursement after fees are processed.</inlineHelpText>
    <label>Final Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>