force-app/main/default/objects/Closing__c/fields/Final_Disbursements_Processed__c.field-meta.xml
<CustomField>
    <fullName>Final_Disbursements_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Disbursements Processed</label>
    <type>Checkbox</type>
</CustomField>