force-app/main/default/objects/Closing__c/fields/Final_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Distribution_Date__c</fullName>
    <label>Final Distribution Date</label>
    <type>Date</type>
</CustomField>