force-app/main/default/objects/Closing__c/fields/Final_Remainder_2_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_2_Check_Number__c</fullName>
    <label>Final Remainder 2 Check Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>