force-app/main/default/objects/Closing__c/fields/Final_Remainder_2_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_2_Sent_Date__c</fullName>
    <label>Final Remainder 2 Sent Date</label>
    <type>Date</type>
</CustomField>