force-app/main/default/objects/Closing__c/fields/Final_Remainder_3_Recipient_First__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_3_Recipient_First__c</fullName>
    <label>Final Remainder 3 Recipient First</label>
    <length>100</length>
    <type>Text</type>
</CustomField>