force-app/main/default/objects/Closing__c/fields/Final_Remainder_3_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_3_Return_Receipt_Date__c</fullName>
    <label>Final Remainder 3 Return Receipt Date</label>
    <type>Date</type>
</CustomField>