force-app/main/default/objects/Closing__c/fields/Final_Remainder_Beneficiaries_Paid__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_Beneficiaries_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Remainder Beneficiaries Paid</label>
    <type>Checkbox</type>
</CustomField>