force-app/main/default/objects/Closing__c/fields/Final_Remainder_Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_Recipient_Address__c</fullName>
    <label>Final Remainder Recipient Address</label>
    <type>TextArea</type>
</CustomField>