force-app/main/default/objects/Closing__c/fields/Final_Remainder_Sent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Remainder_Sent_Amount__c</fullName>
    <label>Final Remainder Sent Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>