force-app/main/default/objects/Closing__c/fields/Frequent_Disbursement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Disbursement_Fee__c</fullName>
    <inlineHelpText>25 or more disbursements - contact A&amp;A</inlineHelpText>
    <label>Frequent Disbursement Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>