force-app/main/default/objects/Closing__c/fields/Funds_in_Set_Aside__c.field-meta.xml
<CustomField>
    <fullName>Funds_in_Set_Aside__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if funds are held in set-aside</description>
    <inlineHelpText>This box is checked if funds are held in set-aside</inlineHelpText>
    <label>Funds in Set-Aside</label>
    <type>Checkbox</type>
</CustomField>