force-app/main/default/objects/Closing__c/fields/Funeral_Plan__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan__c</fullName>
    <label>Funeral Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>