force-app/main/default/objects/Closing__c/fields/How_Distribute_Funds_on_Early_Term__c.field-meta.xml
<CustomField>
    <fullName>How_Distribute_Funds_on_Early_Term__c</fullName>
    <inlineHelpText>How should the funds be distributed upon early termination of the beneficiary&apos;s Sub-Account (3rd party trust)?</inlineHelpText>
    <label>How Distribute Funds on Early Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To the Donor (if then living)</fullName>
            </value>
            <value>
                <fullName>To the Primary Remainderpersons/Organizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>