force-app/main/default/objects/Closing__c/fields/Last_Month_s_Fees__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_s_Fees__c</fullName>
    <inlineHelpText>Updated by a flow. Will popuplate with the value in This Month&apos;s Fees if Charge Last Month&apos;s Fee is Yes</inlineHelpText>
    <label>Last Month&apos;s Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>