force-app/main/default/objects/Closing__c/fields/Medicaid_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Amount_Paid__c</fullName>
    <label>Medicaid Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>