force-app/main/default/objects/Closing__c/fields/Medicaid_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Claim_Amount__c</fullName>
    <label>Medicaid Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>