force-app/main/default/objects/Closing__c/fields/Medicaid_Claim_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Claim_Paid_Date__c</fullName>
    <label>Medicaid Claim Paid Date</label>
    <type>Date</type>
</CustomField>