force-app/main/default/objects/Closing__c/fields/Medicaid_Claim_Received__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Claim_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid Claim Received</label>
    <type>Checkbox</type>
</CustomField>