force-app/main/default/objects/Closing__c/fields/Medicaid_Cover_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Cover_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid Cover Letter Sent</label>
    <type>Checkbox</type>
</CustomField>