force-app/main/default/objects/Closing__c/fields/Medicaid_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Notes__c</fullName>
    <label>Medicaid Notes</label>
    <type>TextArea</type>
</CustomField>