force-app/main/default/objects/Closing__c/fields/Medicaid_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid Notification Sent</label>
    <type>Checkbox</type>
</CustomField>