force-app/main/default/objects/Closing__c/fields/Medicaid_Release_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Release_Received_Date__c</fullName>
    <label>Medicaid Release Received Date</label>
    <type>Date</type>
</CustomField>