force-app/main/default/objects/Closing__c/fields/Medicaid_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Request_Date__c</fullName>
    <label>Medicaid Request Date</label>
    <type>Date</type>
</CustomField>