force-app/main/default/objects/Closing__c/fields/Months_in_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Months_in_Reserve__c</fullName>
    <formula>Unclaimed_Amount_to_Reserve__c /25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount unclaimed by the beneficiary divided by $25 for the months in remainder.  Subtract $25 per month that the amount is held in the remainder.</inlineHelpText>
    <label>Months in Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>