force-app/main/default/objects/Closing__c/fields/No_Fee_Closing__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Fee Closing</label>
    <type>Checkbox</type>
</CustomField>