force-app/main/default/objects/Closing__c/fields/Number_of_Final_Remainder_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Final_Remainder_Beneficiaries__c</fullName>
    <label># of Final Remainder Beneficiaries</label>
    <summaryForeignKey>Remainder_Person__c.Closing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>