force-app/main/default/objects/Closing__c/fields/Other_Closing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Closing_Fee__c</fullName>
    <inlineHelpText>This is for any miscellaneous fees that may need to be taken into account.</inlineHelpText>
    <label>Other Closing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>