force-app/main/default/objects/Closing__c/fields/Other_Retained_By_Trust_After_Death__c.field-meta.xml
<CustomField>
    <fullName>Other_Retained_By_Trust_After_Death__c</fullName>
    <label>Other % Retained By Trust After Death</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>