force-app/main/default/objects/Closing__c/fields/Outstanding_Invoices_for_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoices_for_Beneficiary__c</fullName>
    <label>Outstanding Invoices for Beneficiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>