force-app/main/default/objects/Closing__c/fields/Outstanding_Invoices_Value__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoices_Value__c</fullName>
    <label>Outstanding Invoices Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>