force-app/main/default/objects/Closing__c/fields/Pending_Credit_Card_Postings__c.field-meta.xml
<CustomField>
    <fullName>Pending_Credit_Card_Postings__c</fullName>
    <inlineHelpText>Check with all CM&apos;s</inlineHelpText>
    <label>Pending Credit Card Postings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>