force-app/main/default/objects/Closing__c/fields/Pending_Credit_Card_Postings_Value__c.field-meta.xml
<CustomField>
    <fullName>Pending_Credit_Card_Postings_Value__c</fullName>
    <label>Pending Credit Card Postings Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>